[package]
name = "bk-tree"
version = "0.4.0"
authors = ["Eugene Bulkin <eugene.bulkin2@gmail.com>"]
description = "A Rust BK-tree implementation"

documentation = "http://eugene-bulkin.github.io/rust-docs/rust-bk-tree/bk_tree/index.html"
repository = "https://github.com/eugene-bulkin/rust-bk-tree"

readme = "README.md"
license = "MIT"
keywords = ["fuzzy", "search", "BK-tree"]
categories = ["data-structures", "text-processing"]

[dependencies]
fnv = { version = "1.0.7", optional = true }
triple_accel = "0.4.0"

[dev-dependencies]
rand = "0.8"

[features]
default = ["enable-fnv"]
enable-fnv = ["fnv"]
