[package]
name = "bk-tree"
version = "0.5.0"
authors = ["Eugene Bulkin <eugene.bulkin2@gmail.com>"]
description = "A Rust BK-tree implementation"

documentation = "https://docs.rs/bk-tree/"
repository = "https://github.com/eugene-bulkin/rust-bk-tree"

readme = "README.md"
license = "MIT"
keywords = ["fuzzy", "search", "BK-tree"]
categories = ["data-structures", "text-processing"]

[dependencies]
fnv = { version = "1.0.7", optional = true }
lev_distance = "0.1.1"
triple_accel = "0.3.4"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
rand = "0.3"
bincode = "1.3"

[features]
default = ["enable-fnv"]
enable-fnv = ["fnv"]
serde = ["dep:serde"]
